UI gap fix

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -62,9 +62,9 @@ body {
 	grid-template-rows: 2fr 3fr;
 	width: 100%;
 	height: 100vh;
-	padding: 2%;
-	row-gap: 2vw;
-	column-gap: 2%;
+	padding: calc(1vw + 1vh);
+	row-gap: calc(1vw + 1vh);
+	column-gap: calc(1vw + 1vh);
 	overflow: scroll;
 }
 
@@ -103,12 +103,12 @@ body {
 
 .card.left {
 	width: 60%;
-	margin-right: 1vw;
+	margin-right: calc(0.5vw + 0.5vh);
 }
 
 .card.right {
 	width: 40%;
-	margin-left: 1vw;
+	margin-left: calc(0.5vw + 0.5vh);
 }
 
 #title {
